# tetris

./: Cargo.toml  Dioxus.toml  README.md
assets/: script.js  style.css
src/: main.rs  tetris.rs
