[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]

once_cell = "1.19.0"
rand = "0.9.0-alpha.2"


dioxus = { version = "0.6.0-alpha.2", features = ["web"] }
# Debug
#[cfg(features="web")]
console_error_panic_hook = "0.1.7"
dioxus-logger = "0.5.1"
async-std = "1.13.0"
web-time = "1.1.0"

getrandom = { version = "0.2", features = ["js"] }