[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]

once_cell = "1.19.0"
rand = "0.9.0-alpha.2"


dioxus = { version = "0.6.0-alpha.2", features = ["default","web"] }
# Debug
dioxus-logger = "0.5.1"
async-std = "1.13.0"
web-time = "1.1.0"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"

getrandom = { version = "0.2", features = ["js"] }
[features]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]